--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ if(this.el.object3D.visible == true){
     </a-assets>
    
     <a-marker id="memarker" preset="hiro" vidhandler>
-      <a-sphere scale="0.8 0.8 0.8" rotation= "90 0 0" position='0 0 0' material='src:#vid'><a-sphere>
+      <a-sphere rotation= "90 0 0" position='0 0 0' material='src:#vid'><a-sphere>
 
 
     </a-marker>
