--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ if(this.el.object3D.visible == true){
   </div>
   <a-scene embedded artoolkit='sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180' >
     <a-assets>
-      <video id="vid" src="https://raw.githubusercontent.com/stpalmer2/hack_portraits-/master/video/Particle-Mountains-for-globe.ogv" loop="true" crossorigin>
+      <video id="vid" src="https://raw.githubusercontent.com/stpalmer2/hack_portraits-/master/video/Particle Mountains for globe.mp4" loop="true" crossorigin>
 
     </a-assets>
    
